# job-pipeline

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  LICENSE  PLAN-email-parser.md  README.md  daytona-prep-checklist.md  daytona-stretch-plan.md  demo-script.md  deploy-prep-checklist.md  extract.py  frontend-spec.md  jd-aggregator-sprint-plan.md  normalize.py  proposals.md  pyproject.toml  research.md  resume-match-plan.md  seed.py  sigma.config.yml  source-file-storage-plan.md  storage-blueprint.md  tailored-resume-blueprint.md  tailored-resume-plan.md  tasks.md  test_key.py
.tours/: job-pipeline-from-jd-screenshot-to-ranked-skills.tour
dashboard/: .vercelignore  eslint.config.js  index.html  package-lock.json  package.json
dashboard/api/: canonicalMap.js  cv.js  deleteCleanup.test.js  extract.js  extract.test.js  file.js  file.test.js  job.js  (+8 more)
data/: extracted.json
email_parser/: __init__.py  classify.py  config.py  extract_fields.py  matcher.py  models.py  normalize.py  pipeline.py  source.py
grill/: PLAN-email-parser.md  blueprint.md  email-parser-spec.md  spec.md  tailored-resume-blueprint.md
scratch/: README.md  daytona_hello.mjs  extract_probe.ipynb  extraction_probe.ipynb  inspect_skills.py  matcher_probe.ipynb  package-lock.json  package.json  resume_endpoint_test.mjs  resume_probe.mjs
scripts/: gmail_auth.py  run_parser.py  seed_applications.py
tests/: test_classify.py  test_email_models.py  test_email_normalize.py  test_extract_fields.py  test_gmail_auth.py  test_matcher.py  test_normalize.py  test_pipeline.py  test_source.py
(+42 files in other folders)
