[project]
name = "job-pipeline"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.111.0",
    "google-api-python-client>=2.149.0",
    "google-auth-oauthlib>=1.2.1",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
